chore: slider jump fixes + slider demos

--- a/src/extensions/slider/slider.less
+++ b/src/extensions/slider/slider.less
@@ -50,10 +50,6 @@
   &:active, &.active {
     transition: all @time-small @ease-out;
   }
-  // custom
-  .slide & {
-    .btn-primary();
-  }
 }
 
 [data-xt-nav].btn {
@@ -63,10 +59,6 @@
   border-radius: 2rem;
   [class^='icon-'], [class*=' icon-'] {
     .icon-small();
-  }
-  // custom
-  .slide & {
-    .btn-primary();
   }
 }
 
